--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
@@ -8,6 +8,11 @@ ion-icon{
     color: #fff;
 }
 
+.time-selection{
+    padding-left: 175px;
+    color: #929292;
+}
+
 .date-selection{
     width: 400px;
     text-align-last: center;
