--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.scss
@@ -1,10 +1,10 @@
-ion-select{
-    width: 400px;
-    text-align-last: center;
-}
-
 ion-icon{
     color: #fff;
+}
+
+.time-selection{
+    padding-left: 275px;
+    color: #929292;
 }
 
 .date-selection{
@@ -28,6 +28,10 @@ ion-icon{
 
 .table-title-color{
     background-color: #833535;
+}
+
+.table-row-color{
+    background-color: #929292;
 }
 
 .right{
