--- a/Frontend/Emoticoach/src/app/pages/account/account.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/account.page.html
@@ -20,9 +20,9 @@
               <ion-item>
                 <ion-text>{{user_firstlast}}</ion-text>
               </ion-item>
-              <ion-button class="no-ripple" fill={{accountButton}} size="small" (click)="displayAccountPage()">Account</ion-button>
-              <ion-button fill={{emotibitButton}} size="small" (click)="displayEmotibitPage()">EmotiBit</ion-button>
-              <ion-button fill={{settingsButton}} size="small" (click)="displaySettingsPage()">Settings</ion-button>
+              <ion-button color="#833535" fill={{accountButton}} size="small" (click)="displayAccountPage()">Account</ion-button>
+              <ion-button color="#833535" fill={{emotibitButton}} size="small" (click)="displayEmotibitPage()">EmotiBit</ion-button>
+              <ion-button color="#833535" fill={{settingsButton}} size="small" (click)="displaySettingsPage()">Settings</ion-button>
             </ion-card-content>
           </ion-card>
         </ion-col>
