--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -1,16 +1,27 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button expand="block" routerLink="/tabs/home">
-        <ion-icon color="success" name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Muscle Group Graph</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-button color="#833535" slot="start" routerLink="/tabs/home">
+    <ion-icon name="arrow-back"></ion-icon>
+  </ion-button>
+<ion-title>Muscle Group Graph</ion-title>
+<ion-icon id="open-modal" slot="end" size="large" name="information-circle-outline"></ion-icon>
+</ion-toolbar>
 
 
 <ion-content>
+  <ion-modal
+  trigger="open-modal"
+  [initialBreakpoint]="0.25"
+  [breakpoints]="[0, 0.25, 0.5, 0.75]"
+  handleBehavior="cycle"
+>
+  <ng-template>
+    <ion-content class="ion-padding">
+      <div class="ion-margin-top">
+        <ion-label>This graph shows you how many reps you've completed for a specific muscle group.</ion-label>
+      </div>
+    </ion-content>
+  </ng-template>
+</ion-modal>
 
   <div class="chart-container">
     <canvas id="MuscleGroupChart">{{ chart }}</canvas>
