Fixed month view, now hides x axis when switched to month view. Added multiple selection for muscle groups.

--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -13,7 +13,7 @@
       interface="popover" 
       class="date-selection"
       [(ngModel)]="timeView"
-      (ionChange)="changeDuration()">
+      (ionChange)="changeDuration(timeView)">
       <ion-select-option value="7">Week View</ion-select-option> 
       <ion-select-option value="30">Month View</ion-select-option>
       </ion-select>
