--- a/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.scss
+++ b/Frontend/Emoticoach/src/app/pages/log-workout/exercise/exercise-set/exercise-set.component.scss
@@ -25,3 +25,9 @@ ion-icon {
 .numberLabel{
     color: var( --ion-color-success);
 }
+
+.valueLabels {
+    font-size: 10px;
+    margin: 0px;
+    background-color: transparent;
+}
