--- a/Frontend/Emoticoach/src/global.scss
+++ b/Frontend/Emoticoach/src/global.scss
@@ -30,8 +30,6 @@
 @import 'swiper/scss/keyboard';
 @import 'swiper/scss/pagination';
 
-
-
 ion-content {
 
   // overwrite inline styles
@@ -42,6 +40,12 @@ ion-content {
   --background: var(--ion-color-dark);
 }
 
+ion-datetime {
+
+  color: var(--ion-color-medium) !important;
+
+
+}
 
 
 ion-modal {
@@ -54,8 +58,16 @@ ion-modal {
     .overlap {
       position: absolute;
     }
-
+    button {
+      background-color: var(--ion-color-primary) ;
+    }
     background-color: var(--ion-color-dark);
+
+    ion-label {
+      color: var(--ion-color-success);
+    }
+      
+ 
   }
 
   --height: 50%;
