Created live data pages eda and ppg.

--- a/backend/webapp/templates/webapp/base.html
+++ b/backend/webapp/templates/webapp/base.html
@@ -105,14 +105,14 @@
 
             <!-- Nav Item - PPG -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'ppg' %}">
                     <i class="fas fa-heartbeat"></i>
                     <span>PPG</span></a>
             </li>
 
             <!-- Nav Item - EDA -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="{% url 'eda' %}">
                     <i class="fas fa-smile-beam"></i>
                     <span>EDA</span></a>
             </li>
