tables completed with theming

--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.html
@@ -1,10 +1,13 @@
-<ion-toolbar>
-  <ion-button color="#833535" slot="start" routerLink="/tabs/home">
-    <ion-icon name="arrow-back"></ion-icon>
-  </ion-button>
-<ion-title>Muscle Group Graph</ion-title>
-<ion-icon id="open-modal" slot="end" size="large" name="information-circle-outline"></ion-icon>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-button color="#833535" slot="start" routerLink="/tabs/home">
+      <ion-icon name="arrow-back"></ion-icon>
+    </ion-button>
+  <ion-title>Muscle Group Graph</ion-title>
+  <ion-icon id="open-modal" slot="end" size="large" name="information-circle-outline"></ion-icon>
+  </ion-toolbar>
+  
+</ion-header>
 
 
 <ion-content>
