--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -115,7 +115,7 @@
     </ion-card> -->
       </ion-item>
       <ion-item-options>
-        <ion-item-option  (click)="deleteSession(session.id)">
+        <ion-item-option  (click)="deleteSession(session.id, i)">
           <ion-icon slot="icon-only" name="trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
