--- a/Frontend/Emoticoach/src/theme/variables.scss
+++ b/Frontend/Emoticoach/src/theme/variables.scss
@@ -191,6 +191,7 @@
     //primary is red
     --ion-color-primary: #833535;
     --ion-color-primary-contrast: #ffffff;
+    --ion-color-primary-shade:#b96666;
 
     --ion-color-secondary: #323232;
     --ion-color-secondary-contrast: #ffffff;
