--- a/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
+++ b/Frontend/Emoticoach/src/app/pages/workouts-dashboard/workouts-dashboard.page.html
@@ -23,13 +23,13 @@
       <ion-grid>
         <ion-row>
           <ion-label color="success">
-            Select Cards to delete them
+            Select cards to delete them
           </ion-label>
 
         </ion-row>
         <ion-row>
-          <ion-button (click)="deletingSessions()">Cancel</ion-button>
-          <ion-button (click)="confirmDelete()">Confirm</ion-button>
+          <ion-button color="primary" (click)="deletingSessions()" class="onClick">Cancel</ion-button>
+          <ion-button  color="primary" (click)="confirmDelete()"  class="onClick">Confirm</ion-button>
 
         </ion-row>
       </ion-grid>
@@ -115,13 +115,15 @@
     </ion-card> -->
       </ion-item>
       <ion-item-options>
-        <ion-item-option  (click)="deleteSession(session.id)">
+        <ion-item-option  (click)="deleteSession(session.id, i)">
           <ion-icon slot="icon-only" name="trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
  
   </ion-list>
-
+  <ion-infinite-scroll (ionInfinite)="loadMoreSessions($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
