--- a/Frontend/Emoticoach/src/app/pages/account/account.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/account.page.html
@@ -16,7 +16,8 @@
         <ion-col size="12">
           <ion-card class="form-wrapper">
             <ion-card-content>
-                <ion-icon src="../../../../assets/{{selectedAvatar}}.svg" (click)="changeAvatar()"></ion-icon> 
+              <ion-img (click)="changeAvatar()" src="{{'data:image/jpg;base64,'+selectedAvatar.icon}}" 
+              alt="user img"></ion-img>
               <ion-item>
                 <ion-text>{{user_firstlast}}</ion-text>
               </ion-item>
@@ -53,7 +54,6 @@
               </div>
                 <ion-button expand="block" (click)="editInfo()">Save</ion-button>
                 <ion-button color="danger" expand="block" (click)="logout()">Log Out</ion-button>
-
               </ion-card-content>
             </ion-card>
           </ion-col>
