--- a/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.html
@@ -1,10 +1,5 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-button expand="block" routerLink="/tabs/account">
-        <ion-icon name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
     <ion-title>Change Profile Icon</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,8 +10,9 @@
       <ion-text>Select new icon</ion-text>
       <div *ngFor="let icon of icons; let i = index">
         <!-- changeAvatar(icons[i]) -->
-        <ion-card (click)="passToAccount(icons[i])">
-          <ion-icon size="large" src="../../../../assets/{{icons[i]}}.svg"></ion-icon>
+        <ion-card (click)="passToAccount(icon)">
+          <ion-img src="{{'data:image/jpg;base64,'+icon.icon}}" 
+          alt="user img"></ion-img>
         </ion-card>
       </div>
     </ion-card-content>
