Theming looks good for all graphs for both themes

--- a/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-musclegroup/graph-musclegroup.page.scss
@@ -4,8 +4,21 @@ ion-select{
   
 }
 
+ion-modal{
+    --border-color: #000;
+}
+
+ion-label{
+    color: var(--ion-color-success);
+}
+
 ion-icon{
-    color: #fff;
+    color: var(--ion-color-primary);;
+}
+
+.time-selection{
+    padding-left: 175px;
+    color: #929292;
 }
 
 .date-selection{
@@ -28,7 +41,7 @@ ion-icon{
 }
 
 .table-title-color{
-    background-color: #833535;
+    background-color: var(--ion-color-primary);;
 }
 
 .right{
