--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.scss
@@ -4,8 +4,16 @@ ion-select{
   
 }
 
+ion-modal{
+    --border-color: #000;
+}
+
+ion-label{
+    color: var(--ion-color-success);
+}
+
 ion-icon{
-    color: #fff;
+    color: var(--ion-color-primary);;
 }
 
 .time-selection{
