--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-button color="#833535" slot="start" routerLink="/tabs/home">
-      <ion-icon name="arrow-back"></ion-icon>
+      <ion-icon color="white" name="arrow-back"></ion-icon>
     </ion-button>
   <ion-title>One Rep Max Graph</ion-title>
-  <ion-icon id="open-modal" slot="end" size="large" name="information-circle-outline"></ion-icon>
+  <ion-icon id="open-modal-1rm" color="white" slot="end" size="large" name="information-circle-outline"></ion-icon>
   </ion-toolbar>  
 </ion-header>
 
 <ion-content>
-  <ion-item>
+  <ion-item color="dark">
     <ion-select 
     interface="popover" 
     class="date-selection"
@@ -21,7 +21,7 @@
   </ion-item>
 
   <ion-modal
-  trigger="open-modal"
+  trigger="open-modal-1rm"
   [initialBreakpoint]="0.25"
   [breakpoints]="[0, 0.25, 0.5, 0.75]"
   handleBehavior="cycle"
