--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -1,17 +1,17 @@
 <ion-header>
   <ion-toolbar>
     <ion-button color="#833535" slot="start" routerLink="/tabs/home">
-      <ion-icon name="arrow-back"></ion-icon>
+      <ion-icon color="white" name="arrow-back"></ion-icon>
     </ion-button>
     <ion-title>Volume Graph</ion-title>
-    <ion-icon id="open-modal" slot="end" size="large" name="information-circle-outline"></ion-icon>
+    <ion-icon id="open-modal-volume" color="white" slot="end" size="large" name="information-circle-outline"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 
 
   <ion-content>
-    <ion-item>
+    <ion-item color="dark">
       <ion-select 
       interface="popover" 
       class="date-selection"
@@ -22,8 +22,12 @@
     </ion-select>
   </ion-item>
 
-  <ion-modal trigger="open-modal" [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75]"
+  <ion-modal 
+  trigger="open-modal-volume"
+   [initialBreakpoint]="0.25" 
+   [breakpoints]="[0, 0.25, 0.5, 0.75]"
     handleBehavior="cycle">
+    
     <ng-template>
       <ion-content class="ion-padding">
         <div class="ion-margin-top">
@@ -39,7 +43,7 @@
 
   <ion-grid style="border-bottom: 2px solid grey">
     <ion-row>
-      <ion-buttons color="#1E1E1E" lines="none" class="date-selection">
+      <ion-buttons color="primary" lines="none" class="date-selection">
         <ion-col>
           <ion-button (click)="displayPreviousWeek()">
             <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
@@ -48,7 +52,7 @@
 
         <ion-col>
 
-          <ion-text text-align="center">{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
+          <ion-text color="success">{{previousWeekFormatted}} - {{rightsideWeekFormatted}}</ion-text>
 
         </ion-col>
 
@@ -63,7 +67,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-item lines="none" color="#1E1E1E">
+      <ion-item lines="none" color="dark">
         <ion-select interface="popover" placeholder="Select workout" [(ngModel)]="selectedWorkout"
           class="date-selection" (ionChange)="updateChart()">
           <div *ngFor="let workout of workouts; let i = index">
