Icons all the same size

--- a/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.html
+++ b/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.html
@@ -10,7 +10,7 @@
       <ion-text>Select new icon</ion-text>
       <div *ngFor="let icon of icons; let i = index">
         <!-- changeAvatar(icons[i]) -->
-        <ion-card (click)="passToAccount(icon)">
+        <ion-card (click)="passToAccount(icon)" class="icon-card">
           <ion-img src="{{'data:image/jpg;base64,'+icon.icon}}" 
           alt="user img"></ion-img>
         </ion-card>
