--- a/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.scss
+++ b/Frontend/Emoticoach/src/app/pages/account/change-avatar/change-avatar.page.scss
@@ -10,6 +10,11 @@ ion-card{
     display: flex;
 }
 
+.icon-card{
+    height: 100px;
+    background-color: white;
+}
+
 ion-text{
     text-align: center;
 }
