--- a/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-onerm/graph-onerm.page.html
@@ -9,16 +9,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-item color="dark">
-    <ion-select 
-    interface="popover" 
-    class="date-selection"
-    [(ngModel)]="timeView"
-    (ionChange)="changeDuration(timeView)">
-    <ion-select-option value="7">Week View</ion-select-option> 
-    <ion-select-option value="30">Month View</ion-select-option>
-    </ion-select>
-  </ion-item>
+  <ion-row class="ion-justify-content-center">
+    <ion-item color="dark">
+      <ion-select 
+      interface="popover" 
+      class="date-selection"
+      [(ngModel)]="timeView"
+      (ionChange)="changeDuration(timeView)">
+      <ion-select-option value="7">Week View</ion-select-option> 
+      <ion-select-option value="30">Month View</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-row>
+ 
 
   <ion-modal
   trigger="open-modal-1rm"
@@ -40,7 +43,8 @@
   </div>
 
   <ion-grid style="border-bottom: 2px solid grey">
-    <ion-row>
+    <ion-row class="ion-justify-content-center">
+
     <ion-buttons color="primary" lines="none" class="date-selection">
       <ion-col>
         <ion-button (click)="displayPreviousWeek()">
@@ -59,10 +63,9 @@
         </ion-col>
         </ion-buttons>
       </ion-row>
-    </ion-grid>
 
-  <ion-grid>
-    <ion-row>
+      <ion-row class="ion-justify-content-center">
+
         <ion-item lines="none" color="dark">
           <ion-select
           interface="popover" 
