--- a/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
+++ b/Frontend/Emoticoach/src/app/pages/graph-volume/graph-volume.page.html
@@ -11,16 +11,22 @@
 
 
   <ion-content>
-    <ion-item color="dark">
-      <ion-select 
-      interface="popover" 
-      class="date-selection"
-      [(ngModel)]="timeView"
-      (ionChange)="changeDuration(timeView)">
-      <ion-select-option value="7">Week View</ion-select-option> 
-      <ion-select-option value="30">Month View</ion-select-option>
-    </ion-select>
-  </ion-item>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="auto">
+        <ion-item color="dark">
+          <ion-select 
+          interface="popover" 
+          class="date-selection"
+          [(ngModel)]="timeView"
+          (ionChange)="changeDuration(timeView)">
+          <ion-select-option value="7">Week View</ion-select-option> 
+          <ion-select-option value="30">Month View</ion-select-option>
+        </ion-select>
+      </ion-item>
+      </ion-col>
+      
+    </ion-row>
+  
 
   <ion-modal 
   trigger="open-modal-volume"
@@ -42,7 +48,7 @@
   </div>
 
   <ion-grid style="border-bottom: 2px solid grey">
-    <ion-row>
+    <ion-row class="ion-justify-content-center">
       <ion-buttons color="primary" lines="none" class="date-selection">
         <ion-col>
           <ion-button (click)="displayPreviousWeek()">
@@ -63,10 +69,9 @@
         </ion-col>
       </ion-buttons>
     </ion-row>
-  </ion-grid>
 
-  <ion-grid>
-    <ion-row>
+    <ion-row class="ion-justify-content-center">
+
       <ion-item lines="none" color="dark">
         <ion-select interface="popover" placeholder="Select workout" [(ngModel)]="selectedWorkout"
           class="date-selection" (ionChange)="updateChart()">
