Updated dashboard on WebApp.

--- a/backend/webapp/templates/webapp/home.html
+++ b/backend/webapp/templates/webapp/home.html
@@ -53,15 +53,15 @@ Dashboard
     <div class="card shadow mb-4">
       <!-- Card Header - Dropdown -->
       <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Sleep Chart</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Water Chart</h6>
       </div>
       <!-- Card Body -->
       <div class="card-body">
-        <div id="sleepChart" class="chart-pie pt-4">
+        <div id="waterChart" class="chart-pie pt-4">
           <!-- <canvas id="myPieChart"></canvas> -->
         </div>
         <hr>
-        See how much sleep you have been getting.
+          Have you been drinking enough water?
       </div>
     </div>
   </div>
@@ -78,6 +78,24 @@ Dashboard
         </div>
         <hr>
         How has your weight been fluctuating?
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-7 col-lg-6">
+    <div class="card shadow mb-4">
+      <!-- Card Header - Dropdown -->
+      <div class="card-header py-3">
+          <h6 class="m-0 font-weight-bold text-primary">Sleep Chart</h6>
+      </div>
+      <!-- Card Body -->
+      <div class="card-body">
+        <div id="sleepChart" class="chart-pie pt-4">
+          <!-- <canvas id="myPieChart"></canvas> -->
+        </div>
+        <hr>
+        See how much sleep you have been getting.
       </div>
     </div>
   </div>
